# emmett

./: .gitignore  README.md  pyproject.toml
emmett/: bot.py  commands.py  helpers.py  markov.py  settings.example.py  settings.py
